# juliuscoin

./: .gitignore  Cargo.toml  README.md  whitepaper.md
src/: bip39_wordlist.txt  chain.rs  cli.rs  consensus.rs  crypto.rs  economic_model.rs  governance.rs  lib.rs  main.rs  testing.rs  utxo.rs  wallet.rs
src/blockchain/: chain.rs  consensus.rs  mempool.rs  mod.rs  script.rs  utxo.rs
src/blockchain/consensus/: delegation.rs  mod.rs  slashing.rs  staking.rs  vdf.rs  vrf.rs
src/blockchain/consensus/staking/: finalization.rs  mod.rs  rewards.rs  types.rs  validator.rs  withdrawal.rs
src/blockchain/consensus/tests/: mod.rs  staking_test.rs  vdf_test.rs
src/crypto/: default.rs  mod.rs  traits.rs
src/cryptography/: mod.rs
src/cryptography/crypto/: default.rs  mod.rs  sphincs.rs  traits.rs
src/cryptography/wallet/: mnemonic.rs  mod.rs  storage.rs
src/governance/: governance.rs  metrics.rs  mod.rs
src/network/: message.rs  mod.rs  p2p.rs  peer.rs  protocol.rs
src/networking/: message.rs  mod.rs  peer.rs
