[package]
name = "juliuscoin"
version = "0.1.0"
edition = "2021"

[dependencies]
pqcrypto-dilithium = { version = "0.5.0", default-features = false }
pqcrypto-kyber = { version = "0.8.1", default-features = false }
pqcrypto-traits = "0.3.5"  # Adding this line
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.7"
log = "0.4"
env_logger = "0.9"
sha2 = "0.10.8"
hex = "0.4"
tokio = { version = "1.28", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
vrf = "0.2.4"       # VRF実装用
lazy_static = "1.4.0"
ed25519-dalek = "1.0"
thiserror = "1.0"
aes-gcm = "0.10.3"  # AES-GCM for hybrid encryption
rand_core = "0.6"   # For secure nonce generation
pbkdf2 = "0.12"
hmac = "0.12"
clap = { version = "4.4", features = ["derive"] }

# 量子耐性のある暗号アルゴリズムのための依存関係
# sphincsplus = "0.1"  # SPHINCS+用（必要に応じてコメントを外す）
# falcon = "0.1"      # Falcon用（必要に応じてコメントを外す）
