[package]
name = "juliuscoin"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptography
pqcrypto-dilithium = "0.5.0"
pqcrypto-kyber = "0.8.1"
pqcrypto-traits = "0.3.5"
ed25519-dalek = "2.0"
aes-gcm = "0.10.3"
vrf = "0.2.4"
sha2 = "0.10.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Async Runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# Utilities
rand = "0.8"
rand_core = "0.6"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4.0"
regex = "1.10"

# Security
pbkdf2 = "0.12"
hmac = "0.12"

# CLI
clap = { version = "4.4", features = ["derive"] }

# 量子耐性のある暗号アルゴリズムのための依存関係
# sphincsplus = "0.1"  # SPHINCS+用（必要に応じてコメントを外す）
# falcon = "0.1"      # Falcon用（必要に応じてコメントを外す）

generic-array = "0.14"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
